重构了项目结构，将函数定义与声明分离，并抛弃了CMake(悲

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
 				"-leasyx"
 			],
 			"options": {
-				"cwd": "C:/mingw64/bin"
+				"cwd": "${workspaceFolder}"
 			},
 			"problemMatcher": [
 				"$gcc"
